cluster/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
spec:
  type: LoadBalancer
  selector: { app: pihole }
  ports:
    - { name: dns-tcp, port: 53, targetPort: 53, protocol: TCP }
    - { name: dns-udp, port: 53, targetPort: 53, protocol: UDP }
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
spec:
  type: ClusterIP
  selector: { app: pihole }
  ports:
    - { name: http, port: 80, targetPort: 80 }
