cluster/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
spec:
  rules:
    - host: pihole.pkandel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: pihole-web, port: { number: 80 } } }
  tls:
    - hosts: ["pihole.pkandel.com"]
      secretName: wildcard-pkandel-tls
